# router-relay

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
models/: p3_lightgbm.meta.json  p3_lightgbm.txt
scripts/: judge_labels.py  realign_labels.py  self_learn.py  train_p3.py
src/relay/: __init__.py  __main__.py  app.py  auth.py  capture.py  config.py  converters.py  ensemble.py  errors.py  upstream.py
src/relay/router/: __init__.py  features.py  ml_head.py  policy.py  registry.py  runtime.py  scorer.py  tiers.py
tests/: test_router_scoring.py
