[project]
name = "router-relay"
version = "0.1.0"
description = "OpenAI-compatible relay with smart routing (P0: transparent passthrough)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiosqlite>=0.20",
    "lightgbm>=4.3",
    "numpy>=1.26",
]

[project.scripts]
router-relay = "relay.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relay"]

[tool.hatch.build.targets.sdist]
include = ["src/relay", "README.md", ".env.example"]
